# nfl-gpp-simlab

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README_project.md  TODO_app_methodology_link.py  app.py  example.py  players_sample.csv  pyproject.toml  requirements.txt  run.bat  run.sh  sample_players.csv  simulator.py  streamlit_app.py  test_config.toml  test_players.csv  test_runner.py
.github/: release-drafter.yml
.github/workflows/: baseline.yml  ci.yml  link-check.yml  python-ci.yml  release-drafter.yml
.ui_presets/: simulator.json
config_test_results/: diagnostics_summary.csv  metadata.json
data/site/: 2025_w1_players.csv
docs/: README.md  ROADMAP.md  compare_projections.md  gpp_strategy_blueprint.md  master_reference.md  metrics_catalog.md  monte_carlo_blueprint.md  nfl_data_py_integration.md  parallel_monte_carlo.md  pipeline.md  quickstart.md
docs/archive/: README-legacy-2025-08-25.md
docs/research/: README.md  monte_carlo_methodology.md
env_test_results/: metadata.json  sim_players.csv
examples/: quickstart.py
scripts/: __init__.py  build_baseline.py  build_boom_thresholds.py
src/: __init__.py
src/common/: io.py
src/ingest/: __init__.py  name_normalizer.py  scoring.py  site_players.py
src/metrics/: __init__.py
src/nfl_gpp_simlab/: __init__.py  cli.py  config.py  metrics.py  monte_carlo.py  simulation.py  simulator.py
src/optimizer/: engine.py  presets.py
src/projections/: __init__.py  boom_score.py  diagnostics.py  monte_carlo.py  run_week_from_site_players.py  simulator.py  value_metrics.py
src/sim/: __init__.py  correlation.py  game_model.py  game_simulator.py  monte_carlo_estimators.py  pipeline.py  player_model.py  sampler.py
src/simulator/: __init__.py  config.py  monte_carlo.py
test_data/: mock_weekly_data.csv
test_results/: compare.csv  flags.csv  metadata.json
tests/: __init__.py  test_config.py  test_integration.py  test_metrics.py  test_monte_carlo.py  test_monte_carlo_estimators.py  test_sampler.py  test_simulation.py  test_simulator.py
ui/: simulator_app.py
