[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nfl-gpp-simlab"
version = "0.1.0"
description = "NFL GPP Monte Carlo Simulation Laboratory"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "NFL GPP SimLab", email = "contact@example.com"},
]
keywords = ["nfl", "fantasy", "gpp", "monte carlo", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.20.0",
    "tomli; python_version<'3.11'",
    "tomli-w",
]

[project.optional-dependencies]
cli = ["pyyaml"]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.scripts]
nfl-gpp-sim = "nfl_gpp_simlab.cli:main"

[project.urls]
Homepage = "https://github.com/killipso-wq/nfl-gpp-simlab"
Repository = "https://github.com/killipso-wq/nfl-gpp-simlab"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=nfl_gpp_simlab",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true